--- a/LaCasaDeBernardaAlba.tex
+++ b/LaCasaDeBernardaAlba.tex
@@ -5,7 +5,13 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
-\renewcommand{\theendname}{Fin}
+
+% Traducimos constantes a español
+\renewcommand{\theendname}{Fin de "La casa de Bernarda Alba"}
+\renewcommand{\actname}{Acto}
+\renewcommand{\scenename}{Escena}
+\renewcommand{\castname}{Reparto}
+\renewcommand{\continuedname}{Continúa}
 
 % Macros
 \def\Bernarda{\dialog{Bernarda}}
@@ -51,7 +57,6 @@
 		\end{center}
     \end{castpage}
     \act
-    \scene
     \stage{Habitación blanquísima del interior de la casa de Bernarda. Muros gruesos. Puertas en arco con cortinas de yute rematadas en madroños y volantes. Sillas de anea. Cuadros con paisajes inverosímiles de ninfas o reyes de leyenda. Es verano. Un gran silencio umbroso se extiende por la escena. Al levantarse el telón está la escena sola. Se oyen doblar las campanas. Sale la \introduce{Criada}}
     	\Criada{Ya tengo el doble de esas campanas metido entre las sienes.}
     	\Poncia{\charsd{Sale comiendo chorizo y pan}Llevan ya más de dos horas de gori-gori. Han venido curas de todos los pueblos. La iglesia está hermosa. En el primer responso se desmayó la Magdalena.} 
@@ -60,7 +65,7 @@
 		\Criada{¡Si te viera Bernarda...!}
 		\Poncia{¡Quisiera que ahora, que no come ella, que todas nos muriéramos de hambre! ¡Mandona! ¡Dominanta! ¡Pero se fastidia! Le he abierto la orza de chorizos}
 		\Criada{\charsd{Con tristeza, ansiosa}¿Por qué no me das para mi niña, Poncia?}
-		\Poncia{Entra y llévate también un puñado de garbanzos.¡Hoy no se dará cuenta!}
+		\Poncia{Entra y llévate también un puñado de garbanzos. ¡Hoy no se dará cuenta!}
 		\dialog{Voz}{\charsd{Dentro}¡Bernarda!}
 		\Poncia{La vieja. ¿Está bien cerrada?}
 		\Criada{Con dos vueltas de llave}
@@ -68,6 +73,28 @@
 		\dialog{Voz}{¡Bernarda!}
 		\Poncia{\charsd{A voces} ¡Ya viene! \charsd{A la Criada} Limpia bien todo. Si Bernarda no ve relucientes las cosas me arrancará los pocos pelos que me quedan}
 		\Criada{¡Qué mujer!}
+		\Poncia{Tirana de todos los que la rodean. Es capaz de sentarse encima de tu corazón y ver cómo te mueres durante un año sin que se le cierre esa sonrisa fría que lleva en su maldita cara. ¡Limpia, limpia ese vidriado!}
+		\Criada{Sangre en las manos tengo de fregarlo todo.}
+		\Poncia{Ella, la más aseada; ella, la más decente; ella, la más alta. Buen descanso ganó su pobre marido. \charsd{Cesan las campanas.}}
+		\Criada{¿Han venido todos sus parientes?}
+		\Poncia{Los de ella. La gente de él la odia. Vinieron a verlo muerto, y le hicieron la cruz.}
+		\Criada{¿Hay bastantes sillas?}
+		\Poncia{Sobran. Que se sienten en el suelo. Desde que murió el padre de Bernarda no han vuelto a entrar las gentes bajo estos techos. Ella no quiere que la vean en su dominio. ¡Maldita sea!}
+		\Criada{Contigo se portó bien}
+		\Poncia{Treinta años lavando sus sábanas; treinta años comiendo sus sobras; noches en vela cuando tose; días enteros mirando por la rendija para espiar a los vecinos y llevarle el cuento; vida sin secretos una con otra, y sin embargo, ¡maldita sea! ¡Mal dolor de clavo le pinche en los ojos!}
+		\Criada{¡Mujer!}
+		\Poncia{Pero yo soy buena perra; ladro cuando me lo dice y muerdo los talones de los que piden limosna cuando ella me azuza; mis hijos trabajan en sus tierras y ya están los dos casados, pero un día me hartaré.}
+		\Criada{Y ese día...}
+		\Poncia{Ese día me encerraré con ella en un cuarto y le estaré escupiendo un año entero. "Bernarda, por esto, por aquello, por lo otro", hasta ponerla como un lagarto machacado por los niños, que es lo que es ella y toda su parentela. Claro es que no le envidio la vida. La quedan cinco mujeres, cinco hijas feas, que quitando a Angustias, la mayor, que es la hija del primer marido y tiene dineros, las demás mucha puntilla bordada, muchas camisas de hilo, pero pan y uvas por toda herencia.}
+		\Criada{¡Ya quisiera tener yo lo que ellas!}
+		\Poncia{Nosotras tenemos nuestras manos y un hoyo en la tierra de la verdad.}
+		\Criada{Ésa es la única tierra que nos dejan a las que no tenemos nada.
+		\Poncia{\charsd{En la alacena} Este cristal tiene unas motas}
+		\Criada{Ni con el jabón ni con bayeta se le quitan.}
+		\open{Suenan las campanas}
+		\Poncia{ El último responso. Me voy a oírlo. A mí me gusta mucho cómo canta el párroco. En el "Pater noster" subió, subió, subió la voz que parecía un cántaro llenándose de agua poco a poco. ¡Claro es que al final dio un gallo, pero da gloria oírlo! Ahora que nadie como el antiguo sacristán, Tronchapinos. En la misa de mi madre, que esté en gloria, cantó. Retumbaban las paredes, y cuando decía amén era como si un lobo hubiese entrado en la iglesia. \charsd{Imitándolo} ¡Ameeeén! \charsd{Se echa a toser}}
+}
+
 
 
 \end{document}
